Modify Printer monad to use Control.Monad.Search
Exchange MaybeT with SearchT in Printer monad to enable more flexible
pretty printing with multiple weighted alternatives.

--- a/hindent.cabal
+++ b/hindent.cabal
@@ -48,6 +48,7 @@ library
                    , containers
                    , haskell-src-exts >= 1.18
                    , monad-loops
+                   , monad-dijkstra
                    , mtl
                    , text
                    , transformers
