--- a/floskell.cabal
+++ b/floskell.cabal
@@ -28,15 +28,15 @@ source-repository head
 library
   hs-source-dirs:    src/
   ghc-options:       -Wall -O2
-  exposed-modules:   HIndent
-                     HIndent.Types
-                     HIndent.Pretty
-                     HIndent.Comments
-                     HIndent.Styles.Fundamental
-                     HIndent.Styles.ChrisDone
-                     HIndent.Styles.JohanTibell
-                     HIndent.Styles.Gibiansky
-                     HIndent.Styles.Cramer
+  exposed-modules:   Floskell
+                     Floskell.Types
+                     Floskell.Pretty
+                     Floskell.Comments
+                     Floskell.Styles.Fundamental
+                     Floskell.Styles.ChrisDone
+                     Floskell.Styles.JohanTibell
+                     Floskell.Styles.Gibiansky
+                     Floskell.Styles.Cramer
   build-depends:     base >= 4.7 && <5
                    , containers
                    , haskell-src-exts >= 1.18
