--- a/floskell.cabal
+++ b/floskell.cabal
@@ -30,6 +30,7 @@ library
   hs-source-dirs:    src/
   ghc-options:       -Wall -O2
   exposed-modules:   Floskell
+                     Floskell.Buffer
                      Floskell.Types
                      Floskell.Pretty
                      Floskell.Comments
