Implement library functionality for flexible pretty printing

--- a/floskell.cabal
+++ b/floskell.cabal
@@ -45,6 +45,7 @@ library
                      Floskell.Styles.Flex
   build-depends:     base >= 4.7 && <5
                    , containers
+                   , data-default
                    , haskell-src-exts >= 1.19
                    , monad-loops
                    , monad-dijkstra
