--- a/floskell.cabal
+++ b/floskell.cabal
@@ -37,36 +37,36 @@ library
                      Floskell.Printers
                      Floskell.Styles
                      Floskell.Types
-  build-depends:     base >= 4.7 && <5
-                   , aeson
-                   , containers
-                   , unordered-containers
-                   , data-default
-                   , haskell-src-exts >= 1.20
-                   , monad-loops
-                   , monad-dijkstra
-                   , mtl
-                   , bytestring
-                   , utf8-string
-                   , transformers
-                   , text
+  build-depends:     base >=4.9 && <4.13
+                   , aeson >=0.11.3.0 && <1.4.3
+                   , bytestring >=0.10.8.1 && <0.10.9
+                   , containers >=0.5.7.1 && <0.6.1
+                   , data-default >=0.7.1.1 && <0.7.2
+                   , haskell-src-exts ==1.20.*
+                   , monad-dijkstra ==0.1.1.*
+                   , monad-loops >=0.4.3 && <0.5
+                   , mtl >=2.2.1 && <2.3
+                   , text >=1.2.2.2 && <1.2.4
+                   , transformers >=0.5.2.0 && <0.5.6
+                   , unordered-containers >=0.2.8.0 && <0.2.10
+                   , utf8-string >=1.0.1.1 && <1.0.2
 
 executable floskell
   hs-source-dirs:    src/main
   ghc-options:       -Wall -Wno-missing-home-modules -optP-Wno-nonportable-include-path
   main-is:           Main.hs
-  build-depends:     base >= 4 && < 5
+  build-depends:     base >=4.9 && <4.13
                    , floskell
-                   , aeson
-                   , aeson-pretty
-                   , bytestring
-                   , optparse-applicative
-                   , haskell-src-exts
-                   , ghc-prim
-                   , directory
-                   , filepath
-                   , unordered-containers
-                   , text
+                   , aeson >=0.11.3.0 && <1.4.3
+                   , aeson-pretty >=0.8.2 && <0.9
+                   , bytestring >=0.10.8.1 && <0.10.9
+                   , directory >=1.2.6.2 && <1.3.4
+                   , filepath >=1.4.1.0 && <1.4.3
+                   , ghc-prim >=0.5.0.0 && <0.5.4
+                   , haskell-src-exts ==1.20.*
+                   , optparse-applicative >=0.12.1.0 && <0.14.4
+                   , text >=1.2.2.2 && <1.2.4
+                   , unordered-containers >=0.2.8.0 && <0.2.10
 
 test-suite floskell-test
   type: exitcode-stdio-1.0
@@ -74,18 +74,18 @@ test-suite floskell-test
   ghc-options:       -Wall -threaded -rtsopts -with-rtsopts=-N
   main-is:           Test.hs
   other-modules:     Markdone
-  build-depends:     base >= 4 && <5
+  build-depends:     base >=4.9 && <4.13
                    , floskell
-                   , haskell-src-exts
-                   , monad-loops
-                   , mtl
-                   , bytestring
-                   , utf8-string
-                   , hspec
-                   , directory
-                   , text
-                   , deepseq
-                   , exceptions
+                   , bytestring >=0.10.8.1 && <0.10.9
+                   , deepseq >=1.4.2.0 && <1.4.5
+                   , directory >=1.2.6.2 && <1.3.4
+                   , exceptions >=0.8.3 && <0.11
+                   , haskell-src-exts ==1.20.*
+                   , hspec >=2.2.4 && <2.7
+                   , monad-loops >=0.4.3 && <0.5
+                   , mtl >=2.2.1 && <2.3
+                   , text >=1.2.2.2 && <1.2.4
+                   , utf8-string >=1.0.1.1 && <1.0.2
 
 benchmark floskell-bench
   type: exitcode-stdio-1.0
@@ -93,14 +93,14 @@ benchmark floskell-bench
   ghc-options:       -Wall -threaded -rtsopts -with-rtsopts=-N
   main-is:           Benchmark.hs
   other-modules:     Markdone
-  build-depends:     base >= 4 && < 5
+  build-depends:     base >=4.9 && <4.13
                    , floskell
-                   , bytestring
-                   , utf8-string
-                   , haskell-src-exts
-                   , ghc-prim
-                   , directory
-                   , criterion
-                   , deepseq
-                   , exceptions
-                   , text
+                   , bytestring >=0.10.8.1 && <0.10.9
+                   , criterion >=1.1.1.0 && <1.5.4
+                   , deepseq >=1.4.2.0 && <1.4.5
+                   , directory >=1.2.6.2 && <1.3.4
+                   , exceptions >=0.8.3 && <0.11
+                   , ghc-prim >=0.5.0.0 && <0.5.4
+                   , haskell-src-exts ==1.20.*
+                   , text >=1.2.2.2 && <1.2.4
+                   , utf8-string >=1.0.1.1 && <1.0.2
