--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,26 @@ cache:
 matrix:
   include:
 
+  - name: "Cabal GHC-8.0.1"
+    env: BUILD=cabal
+    addons: {apt: {packages: [cabal-install-2.2,ghc-8.0.1], sources: [hvr-ghc]}}
+
+  - name: "Cabal GHC-8.2.2"
+    env: BUILD=cabal
+    addons: {apt: {packages: [cabal-install-2.2,ghc-8.2.2], sources: [hvr-ghc]}}
+
+  - name: "Cabal GHC-8.4.4"
+    env: BUILD=cabal
+    addons: {apt: {packages: [cabal-install-2.2,ghc-8.4.4], sources: [hvr-ghc]}}
+
+  - name: "Cabal GHC-8.6.3"
+    env: BUILD=cabal
+    addons: {apt: {packages: [cabal-install-2.2,ghc-8.6.3], sources: [hvr-ghc]}}
+
+  - name: "Cabal GHC-HEAD"
+    env: BUILD=cabal CABALARGS=--allow-newer
+    addons: {apt: {packages: [cabal-install-head,ghc-head], sources: [hvr-ghc]}}
+
   - name: "Stack LTS-7 (GHC-8.0.1)"
     env: BUILD=stack RESOLVER=lts-7
 
