--- a/floskell.cabal
+++ b/floskell.cabal
@@ -45,7 +45,7 @@ library
                    , data-default
                    , directory
                    , filepath
-                   , haskell-src-exts == 1.21.*
+                   , haskell-src-exts >= 1.19 && < 1.22
                    , monad-loops
                    , monad-dijkstra
                    , mtl
@@ -64,7 +64,7 @@ executable floskell
                    , aeson-pretty
                    , bytestring
                    , optparse-applicative
-                   , haskell-src-exts == 1.21.*
+                   , haskell-src-exts >= 1.19 && < 1.22
                    , ghc-prim
                    , directory
                    , filepath
@@ -79,7 +79,7 @@ test-suite floskell-test
   other-modules:     Markdone
   build-depends:     base >= 4 && <5
                    , floskell
-                   , haskell-src-exts == 1.21.*
+                   , haskell-src-exts >= 1.19 && < 1.22
                    , monad-loops
                    , mtl
                    , bytestring
@@ -100,7 +100,7 @@ benchmark floskell-bench
                    , floskell
                    , bytestring
                    , utf8-string
-                   , haskell-src-exts == 1.21.*
+                   , haskell-src-exts >= 1.19 && < 1.22
                    , ghc-prim
                    , directory
                    , criterion
