--- a/floskell.cabal
+++ b/floskell.cabal
@@ -45,7 +45,7 @@ library
                    , data-default >=0.7.1.1 && <0.7.2
                    , directory >=1.2.6.2 && <1.3.4
                    , filepath >=1.4.1.0 && <1.4.3
-                   , haskell-src-exts ==1.21.*
+                   , haskell-src-exts >= 1.19 && < 1.22
                    , monad-dijkstra ==0.1.1.*
                    , mtl >=2.2.1 && <2.3
                    , text >=1.2.2.2 && <1.2.4
@@ -63,7 +63,7 @@ executable floskell
                    , bytestring >=0.10.8.1 && <0.10.9
                    , directory >=1.2.6.2 && <1.3.4
                    , ghc-prim >=0.5.0.0 && <0.5.4
-                   , haskell-src-exts ==1.21.*
+                   , haskell-src-exts >= 1.19 && < 1.22
                    , optparse-applicative >=0.12.1.0 && <0.14.4
                    , text >=1.2.2.2 && <1.2.4
 
@@ -78,7 +78,7 @@ test-suite floskell-test
                    , bytestring >=0.10.8.1 && <0.10.9
                    , deepseq >=1.4.2.0 && <1.4.5
                    , exceptions >=0.8.3 && <0.11
-                   , haskell-src-exts ==1.21.*
+                   , haskell-src-exts >= 1.19 && < 1.22
                    , hspec >=2.2.4 && <2.8
                    , text >=1.2.2.2 && <1.2.4
                    , utf8-string >=1.0.1.1 && <1.0.2
@@ -96,6 +96,6 @@ benchmark floskell-bench
                    , deepseq >=1.4.2.0 && <1.4.5
                    , exceptions >=0.8.3 && <0.11
                    , ghc-prim >=0.5.0.0 && <0.5.4
-                   , haskell-src-exts ==1.21.*
+                   , haskell-src-exts >= 1.19 && < 1.22
                    , text >=1.2.2.2 && <1.2.4
                    , utf8-string >=1.0.1.1 && <1.0.2
