--- a/floskell.cabal
+++ b/floskell.cabal
@@ -34,6 +34,7 @@ library
                      Floskell.Comments
                      Floskell.Config
                      Floskell.ConfigFile
+                     Floskell.Fixities
                      Floskell.Pretty
                      Floskell.Printers
                      Floskell.Styles
