--- a/floskell.cabal
+++ b/floskell.cabal
@@ -47,10 +47,11 @@ library
                    , directory >=1.2.6.2 && <1.3.4
                    , filepath >=1.4.1.0 && <1.4.3
                    , haskell-src-exts >= 1.19 && < 1.22
-                   , monad-dijkstra ==0.1.1.*
+                   -- , monad-dijkstra >= 0.1.1 && < 0.1.2
+                   , monad-dijkstra
                    , mtl >=2.2.1 && <2.3
                    , text >=1.2.2.2 && <1.2.4
-                   , transformers >=0.5.2.0 && <0.5.6
+                   , transformers >=0.5.2.0 && <0.5.7
                    , unordered-containers >=0.2.8.0 && <0.2.11
                    , utf8-string >=1.0.1.1 && <1.0.2
 
