--- a/floskell.cabal
+++ b/floskell.cabal
@@ -42,20 +42,20 @@ library
                      Floskell.Styles
                      Floskell.Types
   build-depends:     base >=4.9 && <4.13
-                   , aeson >=0.11.3.0 && <1.4.3
-                   , attoparsec >=0.13.1.0 && <0.13.3
-                   , bytestring >=0.10.8.1 && <0.10.9
-                   , containers >=0.5.7.1 && <0.6.1
-                   , data-default >=0.7.1.1 && <0.7.2
-                   , directory >=1.2.6.2 && <1.3.4
-                   , filepath >=1.4.1.0 && <1.4.3
-                   , haskell-src-exts >= 1.19 && < 1.22
-                   , monad-dijkstra ==0.1.1.*
+                   , aeson >=0.11.3.0 && <1.5
+                   , attoparsec >=0.13.1.0 && <0.14
+                   , bytestring >=0.10.8.1 && <0.11
+                   , containers >=0.5.7.1 && <0.7
+                   , data-default >=0.7.1.1 && <0.8
+                   , directory >=1.2.6.2 && <1.4
+                   , filepath >=1.4.1.0 && <1.5
+                   , haskell-src-exts >= 1.19 && <1.22
+                   , monad-dijkstra >=0.1.1 && <0.2
                    , mtl >=2.2.1 && <2.3
-                   , text >=1.2.2.2 && <1.2.4
-                   , transformers >=0.5.2.0 && <0.5.6
-                   , unordered-containers >=0.2.8.0 && <0.2.11
-                   , utf8-string >=1.0.1.1 && <1.0.2
+                   , text >=1.2.2.2 && <1.3
+                   , transformers >=0.5.2.0 && <0.6
+                   , unordered-containers >=0.2.8.0 && <0.3
+                   , utf8-string >=1.0.1.1 && <1.1
 
 executable floskell
   hs-source-dirs:    src/main
@@ -64,12 +64,12 @@ executable floskell
   build-depends:     base >=4.9 && <4.13
                    , floskell
                    , aeson-pretty >=0.8.2 && <0.9
-                   , bytestring >=0.10.8.1 && <0.10.9
-                   , directory >=1.2.6.2 && <1.3.4
-                   , ghc-prim >=0.5.0.0 && <0.5.4
-                   , haskell-src-exts >= 1.19 && < 1.22
-                   , optparse-applicative >=0.12.1.0 && <0.14.4
-                   , text >=1.2.2.2 && <1.2.4
+                   , bytestring >=0.10.8.1 && <0.11
+                   , directory >=1.2.6.2 && <1.4
+                   , ghc-prim >=0.5.0.0 && <0.6
+                   , haskell-src-exts >= 1.19 && <1.22
+                   , optparse-applicative >=0.12.1.0 && <0.15
+                   , text >=1.2.2.2 && <1.3
 
 test-suite floskell-test
   type: exitcode-stdio-1.0
@@ -79,13 +79,13 @@ test-suite floskell-test
   other-modules:     Markdone
   build-depends:     base >=4.9 && <4.13
                    , floskell
-                   , bytestring >=0.10.8.1 && <0.10.9
-                   , deepseq >=1.4.2.0 && <1.4.5
-                   , exceptions >=0.8.3 && <0.11
-                   , haskell-src-exts >= 1.19 && < 1.22
+                   , bytestring >=0.10.8.1 && <0.11
+                   , deepseq >=1.4.2.0 && <1.5
+                   , exceptions >=0.8.3 && <0.12
+                   , haskell-src-exts >= 1.19 && <1.22
                    , hspec >=2.2.4 && <2.8
-                   , text >=1.2.2.2 && <1.2.4
-                   , utf8-string >=1.0.1.1 && <1.0.2
+                   , text >=1.2.2.2 && <1.3
+                   , utf8-string >=1.0.1.1 && <1.1
 
 benchmark floskell-bench
   type: exitcode-stdio-1.0
@@ -95,11 +95,11 @@ benchmark floskell-bench
   other-modules:     Markdone
   build-depends:     base >=4.9 && <4.13
                    , floskell
-                   , bytestring >=0.10.8.1 && <0.10.9
-                   , criterion >=1.1.1.0 && <1.5.5
-                   , deepseq >=1.4.2.0 && <1.4.5
+                   , bytestring >=0.10.8.1 && <0.11
+                   , criterion >=1.1.1.0 && <1.6
+                   , deepseq >=1.4.2.0 && <1.5
                    , exceptions >=0.8.3 && <0.11
-                   , ghc-prim >=0.5.0.0 && <0.5.4
+                   , ghc-prim >=0.5.0.0 && <0.6
                    , haskell-src-exts >= 1.19 && < 1.22
-                   , text >=1.2.2.2 && <1.2.4
-                   , utf8-string >=1.0.1.1 && <1.0.2
+                   , text >=1.2.2.2 && <1.3
+                   , utf8-string >=1.0.1.1 && <1.1
