--- a/floskell.cabal
+++ b/floskell.cabal
@@ -38,18 +38,17 @@ library
                      Floskell.Styles
                      Floskell.Types
   build-depends:     base >=4.9 && <4.13
-                   , aeson >=0.11.3.0 && <1.4.3
-                   , bytestring >=0.10.8.1 && <0.10.9
-                   , containers >=0.5.7.1 && <0.6.1
-                   , data-default >=0.7.1.1 && <0.7.2
+                   , aeson >=0.11.3.0 && <1.5
+                   , bytestring >=0.10.8.1 && <0.11
+                   , containers >=0.5.7.1 && <0.7
+                   , data-default >=0.7.1.1 && <0.8
                    , haskell-src-exts ==1.20.*
-                   , monad-dijkstra ==0.1.1.*
-                   , monad-loops >=0.4.3 && <0.5
+                   , monad-dijkstra >=0.1.1 && <0.2
                    , mtl >=2.2.1 && <2.3
-                   , text >=1.2.2.2 && <1.2.4
-                   , transformers >=0.5.2.0 && <0.5.6
-                   , unordered-containers >=0.2.8.0 && <0.2.10
-                   , utf8-string >=1.0.1.1 && <1.0.2
+                   , text >=1.2.2.2 && <1.3
+                   , transformers >=0.5.2.0 && <0.6
+                   , unordered-containers >=0.2.8.0 && <0.3
+                   , utf8-string >=1.0.1.1 && <1.1
 
 executable floskell
   hs-source-dirs:    src/main
@@ -57,16 +56,16 @@ executable floskell
   main-is:           Main.hs
   build-depends:     base >=4.9 && <4.13
                    , floskell
-                   , aeson >=0.11.3.0 && <1.4.3
+                   , aeson >=0.11.3.0 && <1.5
                    , aeson-pretty >=0.8.2 && <0.9
-                   , bytestring >=0.10.8.1 && <0.10.9
-                   , directory >=1.2.6.2 && <1.3.4
-                   , filepath >=1.4.1.0 && <1.4.3
-                   , ghc-prim >=0.5.0.0 && <0.5.4
+                   , bytestring >=0.10.8.1 && <0.11
+                   , directory >=1.2.6.2 && <1.4
+                   , filepath >=1.4.1.0 && <1.5
+                   , ghc-prim >=0.5.0.0 && <0.6
                    , haskell-src-exts ==1.20.*
-                   , optparse-applicative >=0.12.1.0 && <0.14.4
-                   , text >=1.2.2.2 && <1.2.4
-                   , unordered-containers >=0.2.8.0 && <0.2.10
+                   , optparse-applicative >=0.12.1.0 && <0.15
+                   , text >=1.2.2.2 && <1.3
+                   , unordered-containers >=0.2.8.0 && <0.3
 
 test-suite floskell-test
   type: exitcode-stdio-1.0
@@ -76,16 +75,15 @@ test-suite floskell-test
   other-modules:     Markdone
   build-depends:     base >=4.9 && <4.13
                    , floskell
-                   , bytestring >=0.10.8.1 && <0.10.9
-                   , deepseq >=1.4.2.0 && <1.4.5
-                   , directory >=1.2.6.2 && <1.3.4
-                   , exceptions >=0.8.3 && <0.11
+                   , bytestring >=0.10.8.1 && <0.11
+                   , deepseq >=1.4.2.0 && <1.5
+                   , directory >=1.2.6.2 && <1.4
+                   , exceptions >=0.8.3 && <0.12
                    , haskell-src-exts ==1.20.*
-                   , hspec >=2.2.4 && <2.7
-                   , monad-loops >=0.4.3 && <0.5
+                   , hspec >=2.2.4 && <2.8
                    , mtl >=2.2.1 && <2.3
-                   , text >=1.2.2.2 && <1.2.4
-                   , utf8-string >=1.0.1.1 && <1.0.2
+                   , text >=1.2.2.2 && <1.3
+                   , utf8-string >=1.0.1.1 && <1.1
 
 benchmark floskell-bench
   type: exitcode-stdio-1.0
@@ -95,12 +93,12 @@ benchmark floskell-bench
   other-modules:     Markdone
   build-depends:     base >=4.9 && <4.13
                    , floskell
-                   , bytestring >=0.10.8.1 && <0.10.9
-                   , criterion >=1.1.1.0 && <1.5.4
-                   , deepseq >=1.4.2.0 && <1.4.5
-                   , directory >=1.2.6.2 && <1.3.4
-                   , exceptions >=0.8.3 && <0.11
-                   , ghc-prim >=0.5.0.0 && <0.5.4
+                   , bytestring >=0.10.8.1 && <0.11
+                   , criterion >=1.1.1.0 && <1.6
+                   , deepseq >=1.4.2.0 && <1.5
+                   , directory >=1.2.6.2 && <1.4
+                   , exceptions >=0.8.3 && <0.12
+                   , ghc-prim >=0.5.0.0 && <0.6
                    , haskell-src-exts ==1.20.*
-                   , text >=1.2.2.2 && <1.2.4
-                   , utf8-string >=1.0.1.1 && <1.0.2
+                   , text >=1.2.2.2 && <1.3
+                   , utf8-string >=1.0.1.1 && <1.1
