--- a/floskell.cabal
+++ b/floskell.cabal
@@ -12,7 +12,7 @@ maintainer:          ecramer@memfrob.de
 copyright:           2014 Chris Done, 2015 Andrew Gibiansky, 2016-2020 Enno Cramer
 category:            Development
 build-type:          Simple
-cabal-version:       >=1.8
+cabal-version:       >=1.10
 homepage:            https://www.github.com/ennocramer/floskell
 bug-reports:         https://github.com/ennocramer/floskell/issues
 data-files:          contrib/floskell.el
@@ -29,6 +29,7 @@ source-repository head
 
 library
   hs-source-dirs:    src/
+  default-language:  Haskell2010
   ghc-options:       -Wall
   exposed-modules:   Floskell
                      Floskell.Attoparsec
@@ -60,6 +61,7 @@ library
 
 executable floskell
   hs-source-dirs:    src/main
+  default-language:  Haskell2010
   ghc-options:       -Wall -Wno-missing-home-modules -optP-Wno-nonportable-include-path
   main-is:           Main.hs
   build-depends:     base >=4.9 && <4.15
@@ -73,8 +75,9 @@ executable floskell
                    , text >=1.2.2.2 && <1.3
 
 test-suite floskell-test
-  type: exitcode-stdio-1.0
-  hs-source-dirs: src/main
+  type:              exitcode-stdio-1.0
+  hs-source-dirs:    src/main
+  default-language:  Haskell2010
   ghc-options:       -Wall -threaded -rtsopts -with-rtsopts=-N
   main-is:           Test.hs
   other-modules:     Markdone
@@ -89,8 +92,9 @@ test-suite floskell-test
                    , utf8-string >=1.0.1.1 && <1.1
 
 benchmark floskell-bench
-  type: exitcode-stdio-1.0
+  type:              exitcode-stdio-1.0
   hs-source-dirs:    src/main
+  default-language:  Haskell2010
   ghc-options:       -Wall -threaded -rtsopts -with-rtsopts=-N
   main-is:           Benchmark.hs
   other-modules:     Markdone
