--- a/.travis.yml
+++ b/.travis.yml
@@ -29,9 +29,13 @@ matrix:
     env: BUILD=cabal
     addons: {apt: {packages: [cabal-install-2.2,ghc-8.6.3], sources: [hvr-ghc]}}
 
-  - name: "Cabal GHC-8.8.1"
+  - name: "Cabal GHC-8.8.3"
     env: BUILD=cabal
-    addons: {apt: {packages: [cabal-install-2.2,ghc-8.8.1], sources: [hvr-ghc]}}
+    addons: {apt: {packages: [cabal-install-3.2,ghc-8.8.3], sources: [hvr-ghc]}}
+
+  - name: "Cabal GHC-8.10.1"
+    env: BUILD=cabal
+    addons: {apt: {packages: [cabal-install-3.2,ghc-8.10.1], sources: [hvr-ghc]}}
 
   - name: "Cabal GHC-HEAD"
     env: BUILD=cabal CABALARGS=--allow-newer
@@ -51,6 +55,9 @@ matrix:
 
   - name: "Stack LTS-14 (GHC-8.6.5)"
     env: BUILD=stack RESOLVER=lts-14
+
+  - name: "Stack LTS-16 (GHC-8.8.3)"
+    env: BUILD=stack RESOLVER=lts-16
 
   - name: "Stack haskell-src-exts-1.21"
     env: BUILD=stack STACK_YAML=stack-haskell-src-exts-1.21.yaml RESOLVER=lts-14
