--- a/.travis.yml
+++ b/.travis.yml
@@ -87,7 +87,7 @@ install:
       cabal --version
       ghc --version
       cabal new-update
-      cabal new-build all --enable-tests --enable-benchmarks --only-dependencies $CABALARGS
+      cabal new-build all -j1 --enable-tests --enable-benchmarks --only-dependencies $CABALARGS
     else
       mkdir -p ~/.local/bin
       export PATH="$HOME/.local/bin:$PATH"
@@ -102,7 +102,7 @@ install:
       stack --version
       stack $ARGS --no-terminal setup
       stack $ARGS ghc -- --version
-      stack $ARGS --no-terminal build --test --bench --only-dependencies
+      stack $ARGS --no-terminal build -j1 --test --bench --only-dependencies
     fi
 
 script:
