--- a/.travis.yml
+++ b/.travis.yml
@@ -101,6 +101,12 @@ install:
       fi
       stack --version
       stack $ARGS --no-terminal setup
+      if [ "$RESOLVER" = lts-7 ]; then
+        export PATH="$HOME/.cabal/bin:$PATH"
+        stack $ARGS --no-terminal install cabal-install
+        PATH="$(stack $ARGS --no-terminal path --compiler-bin):$PATH" cabal update
+        PATH="$(stack $ARGS --no-terminal path --compiler-bin):$PATH" cabal install happy
+      fi
       stack $ARGS ghc -- --version
       stack $ARGS --no-terminal build -j1 --test --bench --only-dependencies
     fi
