--- a/floskell.cabal
+++ b/floskell.cabal
@@ -13,7 +13,7 @@ copyright:           2014 Chris Done, 2015 Andrew Gibiansky, 2016-2020 Enno Cram
 category:            Development
 build-type:          Simple
 cabal-version:       >=1.10
-homepage:            https://www.github.com/ennocramer/floskell
+homepage:            https://github.com/ennocramer/floskell
 bug-reports:         https://github.com/ennocramer/floskell/issues
 data-files:          contrib/floskell.el
                      contrib/floskell.coffee
