--- a/floskell.cabal
+++ b/floskell.cabal
@@ -1,110 +1,127 @@
-name:                floskell
-version:             0.10.4
-synopsis:            A flexible Haskell source code pretty printer
-description:         A flexible Haskell source code pretty printer.
-                     .
-                     See the Github page for usage\/explanation: <https://github.com/ennocramer/floskell>
-license:             BSD3
-stability:           Unstable
-license-file:        LICENSE.md
-author:              Chris Done, Andrew Gibiansky, Tobias Pflug, Pierre Radermecker, Enno Cramer
-maintainer:          ecramer@memfrob.de
-copyright:           2014 Chris Done, 2015 Andrew Gibiansky, 2016-2020 Enno Cramer
-category:            Development
-build-type:          Simple
-cabal-version:       >=1.10
-homepage:            https://github.com/ennocramer/floskell
-bug-reports:         https://github.com/ennocramer/floskell/issues
-data-files:          contrib/floskell.el
-                     contrib/floskell.coffee
-extra-source-files:  README.md
-                     CHANGELOG.md
-                     BENCHMARK.md
-                     TEST.md
-                     stack.yaml
+cabal-version:      >=1.10
+name:               floskell
+version:            0.10.4
+license:            BSD3
+license-file:       LICENSE.md
+copyright:
+    2014 Chris Done, 2015 Andrew Gibiansky, 2016-2020 Enno Cramer
+
+maintainer:         ecramer@memfrob.de
+author:
+    Chris Done, Andrew Gibiansky, Tobias Pflug, Pierre Radermecker, Enno Cramer
+
+stability:          Unstable
+homepage:           https://github.com/ennocramer/floskell
+bug-reports:        https://github.com/ennocramer/floskell/issues
+synopsis:           A flexible Haskell source code pretty printer
+description:
+    A flexible Haskell source code pretty printer.
+    .
+    See the Github page for usage\/explanation: <https://github.com/ennocramer/floskell>
+
+category:           Development
+build-type:         Simple
+data-files:
+    contrib/floskell.el
+    contrib/floskell.coffee
+
+extra-source-files:
+    README.md
+    CHANGELOG.md
+    BENCHMARK.md
+    TEST.md
+    stack.yaml
 
 source-repository head
-    type:           git
-    location:       https://github.com/ennocramer/floskell
+    type:     git
+    location: https://github.com/ennocramer/floskell
 
 library
-  hs-source-dirs:    src/
-  default-language:  Haskell2010
-  ghc-options:       -Wall
-  exposed-modules:   Floskell
-                     Floskell.Attoparsec
-                     Floskell.Buffer
-                     Floskell.Comments
-                     Floskell.Config
-                     Floskell.ConfigFile
-                     Floskell.Fixities
-                     Floskell.Imports
-                     Floskell.Pretty
-                     Floskell.Printers
-                     Floskell.Styles
-                     Floskell.Types
-  build-depends:     base >=4.9 && <4.15
-                   , aeson >=0.11.3.0 && <1.6
-                   , attoparsec >=0.13.1.0 && <0.14
-                   , bytestring >=0.10.8.1 && <0.11
-                   , containers >=0.5.7.1 && <0.7
-                   , data-default >=0.7.1.1 && <0.8
-                   , directory >=1.2.6.2 && <1.4
-                   , filepath >=1.4.1.0 && <1.5
-                   , haskell-src-exts >= 1.19 && <1.24
-                   , monad-dijkstra >=0.1.1 && <0.2
-                   , mtl >=2.2.1 && <2.3
-                   , text >=1.2.2.2 && <1.3
-                   , transformers >=0.5.2.0 && <0.6
-                   , unordered-containers >=0.2.8.0 && <0.3
-                   , utf8-string >=1.0.1.1 && <1.1
+    exposed-modules:
+        Floskell
+        Floskell.Attoparsec
+        Floskell.Buffer
+        Floskell.Comments
+        Floskell.Config
+        Floskell.ConfigFile
+        Floskell.Fixities
+        Floskell.Imports
+        Floskell.Pretty
+        Floskell.Printers
+        Floskell.Styles
+        Floskell.Types
+
+    hs-source-dirs:   src/
+    default-language: Haskell2010
+    ghc-options:      -Wall
+    build-depends:
+        base >=4.9 && <4.15,
+        aeson >=0.11.3.0 && <1.6,
+        attoparsec >=0.13.1.0 && <0.14,
+        bytestring >=0.10.8.1 && <0.11,
+        containers >=0.5.7.1 && <0.7,
+        data-default >=0.7.1.1 && <0.8,
+        directory >=1.2.6.2 && <1.4,
+        filepath >=1.4.1.0 && <1.5,
+        haskell-src-exts >=1.19 && <1.24,
+        monad-dijkstra >=0.1.1 && <0.2,
+        mtl >=2.2.1 && <2.3,
+        text >=1.2.2.2 && <1.3,
+        transformers >=0.5.2.0 && <0.6,
+        unordered-containers >=0.2.8.0 && <0.3,
+        utf8-string >=1.0.1.1 && <1.1
 
 executable floskell
-  hs-source-dirs:    src/main
-  default-language:  Haskell2010
-  ghc-options:       -Wall -Wno-missing-home-modules -optP-Wno-nonportable-include-path
-  main-is:           Main.hs
-  build-depends:     base >=4.9 && <4.15
-                   , floskell
-                   , aeson-pretty >=0.8.2 && <0.9
-                   , bytestring >=0.10.8.1 && <0.11
-                   , directory >=1.2.6.2 && <1.4
-                   , ghc-prim >=0.5.0.0 && <0.7
-                   , haskell-src-exts >= 1.19 && <1.24
-                   , optparse-applicative >=0.12.1.0 && <0.16
-                   , text >=1.2.2.2 && <1.3
+    main-is:          Main.hs
+    hs-source-dirs:   src/main
+    default-language: Haskell2010
+    ghc-options:
+        -Wall -Wno-missing-home-modules -optP-Wno-nonportable-include-path
+
+    build-depends:
+        base >=4.9 && <4.15,
+        floskell -any,
+        aeson-pretty >=0.8.2 && <0.9,
+        bytestring >=0.10.8.1 && <0.11,
+        directory >=1.2.6.2 && <1.4,
+        ghc-prim >=0.5.0.0 && <0.7,
+        haskell-src-exts >=1.19 && <1.24,
+        optparse-applicative >=0.12.1.0 && <0.16,
+        text >=1.2.2.2 && <1.3
 
 test-suite floskell-test
-  type:              exitcode-stdio-1.0
-  hs-source-dirs:    src/main
-  default-language:  Haskell2010
-  ghc-options:       -Wall -threaded -rtsopts -with-rtsopts=-N
-  main-is:           Test.hs
-  other-modules:     Markdone
-  build-depends:     base >=4.9 && <4.15
-                   , floskell
-                   , bytestring >=0.10.8.1 && <0.11
-                   , deepseq >=1.4.2.0 && <1.5
-                   , exceptions >=0.8.3 && <0.12
-                   , haskell-src-exts >= 1.19 && <1.24
-                   , hspec >=2.2.4 && <2.8
-                   , text >=1.2.2.2 && <1.3
-                   , utf8-string >=1.0.1.1 && <1.1
+    type:             exitcode-stdio-1.0
+    main-is:          Test.hs
+    hs-source-dirs:   src/main
+    other-modules:    Markdone
+    default-language: Haskell2010
+    ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N
+    build-depends:
+        base >=4.9 && <4.15,
+        floskell -any,
+        bytestring >=0.10.8.1 && <0.11,
+        deepseq >=1.4.2.0 && <1.5,
+        exceptions >=0.8.3 && <0.12,
+        haskell-src-exts >=1.19 && <1.24,
+        hspec >=2.2.4 && <2.8,
+        text >=1.2.2.2 && <1.3,
+        utf8-string >=1.0.1.1 && <1.1
 
 benchmark floskell-bench
-  type:              exitcode-stdio-1.0
-  hs-source-dirs:    src/main
-  default-language:  Haskell2010
-  ghc-options:       -Wall -threaded -rtsopts -with-rtsopts=-N
-  main-is:           Benchmark.hs
-  other-modules:     Markdone
-  build-depends:     base >=4.9 && <4.15
-                   , floskell
-                   , bytestring >=0.10.8.1 && <0.11
-                   , criterion >=1.1.1.0 && <1.6
-                   , deepseq >=1.4.2.0 && <1.5
-                   , exceptions >=0.8.3 && <0.11
-                   , ghc-prim >=0.5.0.0 && <0.7
-                   , haskell-src-exts >= 1.19 && < 1.24
-                   , text >=1.2.2.2 && <1.3
-                   , utf8-string >=1.0.1.1 && <1.1
+    type:             exitcode-stdio-1.0
+    main-is:          Benchmark.hs
+    hs-source-dirs:   src/main
+    other-modules:    Markdone
+    default-language: Haskell2010
+    ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N
+    build-depends:
+        base >=4.9 && <4.15,
+        floskell -any,
+        bytestring >=0.10.8.1 && <0.11,
+        criterion >=1.1.1.0 && <1.6,
+        deepseq >=1.4.2.0 && <1.5,
+        exceptions >=0.8.3 && <0.11,
+        ghc-prim >=0.5.0.0 && <0.7,
+        haskell-src-exts >=1.19 && <1.24,
+        text >=1.2.2.2 && <1.3,
+        utf8-string >=1.0.1.1 && <1.1
