Switch to official Haskell setup action

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,7 +54,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Setup Haskell
-        uses: actions/setup-haskell@v1.1.2
+        uses: haskell/actions/setup@v1
         id: setup-haskell-cabal
         with:
           ghc-version: ${{ matrix.ghc }}
