--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-latest, macOS-latest ]
-        ghc: [ 8.0.2, 8.2.2, 8.4.4, 8.6.5, 8.8.3, 8.10.1, 9.0.1 ]
+        ghc: [ 8.0.2, 8.2.2, 8.4.4, 8.6.5, 8.8.3, 8.10.1, 9.0.1, 9.2.1 ]
         include:
           - os: ubuntu-latest
             ghc: 8.0.2
