--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,8 @@ jobs:
         exclude:
           - os: macOS-latest
             ghc: 8.4.4
+          - os: macOS-latest
+            ghc: 9.4.2
 
     env:
       ARGS: --enable-tests --enable-benchmarks ${{ matrix.hse-constraint }}
