--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,8 @@ jobs:
             ghc: 8.4.4
           - os: macOS-latest
             ghc: 9.4.2
+          - os: ubuntu-latest
+            ghc: 9.4.2
 
     env:
       ARGS: --enable-tests --enable-benchmarks ${{ matrix.hse-constraint }}
